After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789654 - Hang on panel exit
Hang on panel exit
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: properties
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2017-10-30 15:16 UTC by Bastien Nocera
Modified: 2017-11-14 17:02 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2017-10-30 15:16:58 UTC
This could happen on exit, if bluetoothd fails to reply.

  • #0 __GI___poll
    at ../sysdeps/unix/sysv/linux/poll.c line 29
  • #1 g_main_context_iterate.isra
  • #2 g_main_loop_run
  • #3 g_dbus_connection_send_message_with_reply_sync
  • #4 g_dbus_connection_call_sync_internal
  • #5 g_dbus_proxy_call_sync_internal
  • #6 g_dbus_proxy_call_sync
  • #7 properties_call_set_sync
  • #8 bluetooth_client_set_property
  • #9 g_object_set_valist
  • #10 g_object_set
  • #11 bluetooth_settings_widget_finalize
  • #12 g_object_unref
  • #13 gtk_stack_forall
  • #14 gtk_container_destroy
  • #15 g_closure_invoke
  • #16 signal_emit_unlocked_R
  • #17 g_signal_emit_valist
  • #18 g_signal_emit
  • #19 gtk_widget_dispose
  • #20 g_object_run_dispose
  • #21 gtk_container_destroy
  • #22 g_closure_invoke
  • #23 signal_emit_unlocked_R
  • #24 g_signal_emit_valist
  • #25 g_signal_emit
  • #26 gtk_widget_dispose
  • #27 g_object_run_dispose
  • #28 gtk_box_forall
  • #29 gtk_container_destroy
  • #30 g_closure_invoke
  • #31 signal_emit_unlocked_R
  • #32 g_signal_emit_valist
  • #33 g_signal_emit
  • #34 gtk_widget_dispose
  • #35 g_object_unref
  • #36 gtk_container_remove
  • #37 cc_window_set_active_panel_from_id.isra
  • #38 g_cclosure_marshal_VOID__STRINGv
  • #39 _g_closure_invoke_va
  • #40 g_signal_emit_valist
  • #41 g_signal_emit
  • #42 row_activated_cb
  • #43 g_closure_invoke
  • #44 signal_emit_unlocked_R
  • #45 g_signal_emit_valist
  • #46 g_signal_emit
  • #47 gtk_list_box_multipress_gesture_released
  • #48 ffi_call_unix64
    at ../src/x86/unix64.S line 76
  • #49 ffi_call
    at ../src/x86/ffi64.c line 525
  • #50 g_cclosure_marshal_generic_va
  • #51 _g_closure_invoke_va
  • #52 g_signal_emit_valist
  • #53 g_signal_emit
  • #54 gtk_gesture_multi_press_end
  • #55 g_cclosure_marshal_VOID__BOXEDv
  • #56 _g_closure_invoke_va
  • #57 g_signal_emit_valist
  • #58 g_signal_emit
  • #59 _gtk_gesture_check_recognized
  • #60 gtk_gesture_handle_event
  • #61 gtk_gesture_single_handle_event
  • #62 gtk_event_controller_handle_event
  • #63 _gtk_widget_run_controllers
  • #64 _gtk_marshal_BOOLEAN__BOXEDv
  • #65 _g_closure_invoke_va
  • #66 g_signal_emit_valist
  • #67 g_signal_emit
  • #68 gtk_widget_event_internal
  • #69 propagate_event
  • #70 gtk_main_do_event
  • #71 _gdk_event_emit
  • #72 gdk_event_source_dispatch
  • #73 g_main_context_dispatch
  • #74 g_main_context_iterate.isra
  • #75 g_main_context_iteration
  • #76 g_application_run
  • #77 main

Comment 1 Bastien Nocera 2017-11-14 17:02:36 UTC
Should be fixed in:
commit 27e88fc0119d6c423caade21b575d9f66f15c5ce
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Nov 14 16:57:17 2017 +0100

    lib: Simplify Properties setting
    
    Stop setting properties on adapters or devices by making D-Bus calls
    ourselves, and rely on wrapped GObject properties instead.
    
    For the calls we're making, the only change will be the error message
    coming from the generated wrapper, rather than being our own custom ones.
    We weren't really able to recover from errors in the past anyway, so
    this shouldn't make the overall experience any worse.
    
    This also fixes a possible hang on exit in the Bluetooth panel.
    
    See https://bugzilla.gnome.org/show_bug.cgi?id=789654
    
    https://bugzilla.gnome.org/show_bug.cgi?id=782530