lib: Simplify Properties setting

Stop setting properties on adapters or devices by making D-Bus calls
ourselves, and rely on wrapped GObject properties instead.

For the calls we're making, the only change will be the error message
coming from the generated wrapper, rather than being our own custom ones.
We weren't really able to recover from errors in the past anyway, so
this shouldn't make the overall experience any worse.

This also fixes a possible hang on exit in the Bluetooth panel.

See https://bugzilla.gnome.org/show_bug.cgi?id=789654

https://bugzilla.gnome.org/show_bug.cgi?id=782530